[gd_scene load_steps=13 format=2]

[ext_resource path="res://Good Scenes/TwoPlayer.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dir_up.png" type="Texture" id=2]
[ext_resource path="res://Fonts/orange juice 2.0.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/dir_down.png" type="Texture" id=4]
[ext_resource path="res://Good Scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Good Scenes/Pedal.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.0
bounce = 1.0

[sub_resource type="InputEventKey" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 512, 10 )

[node name="TwoPlayer" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Node2D" parent="."]

[node name="P1" type="CanvasLayer" parent="GUI"]

[node name="Container" type="Control" parent="GUI/P1"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Up" type="TextureButton" parent="GUI/P1/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -20.0
margin_right = 45.0
margin_bottom = 60.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Score" type="Label" parent="GUI/P1/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = 250.0
margin_right = 165.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1

[node name="Down" type="TextureButton" parent="GUI/P1/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = 380.0
margin_right = 45.0
margin_bottom = 460.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="P2" type="CanvasLayer" parent="GUI"]

[node name="Container" type="Control" parent="GUI/P2"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Up" type="TextureButton" parent="GUI/P2/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 819.0
margin_top = -20.0
margin_right = 899.0
margin_bottom = 60.0
rect_scale = Vector2( 2.5, 2.5 )
group = SubResource( 2 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Score" type="Label" parent="GUI/P2/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 819.0
margin_top = 250.0
margin_right = 1019.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 1

[node name="Down" type="TextureButton" parent="GUI/P2/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 819.0
margin_top = 380.0
margin_right = 899.0
margin_bottom = 460.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Interactables" type="Node2D" parent="."]

[node name="Ball" parent="Interactables" instance=ExtResource( 5 )]
position = Vector2( 661.607, 195.485 )
physics_material_override = SubResource( 4 )

[node name="P1" parent="Interactables" instance=ExtResource( 6 )]
position = Vector2( 200, 300 )
script = null

[node name="P2" parent="Interactables" instance=ExtResource( 6 )]
position = Vector2( 824, 300 )
down_key = SubResource( 5 )

[node name="Walls" type="Node2D" parent="."]

[node name="upwall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/upwall"]
position = Vector2( 512, -10 )
shape = SubResource( 6 )

[node name="downwall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/downwall"]
position = Vector2( 512, 610 )
shape = SubResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[connection signal="button_down" from="GUI/P1/Container/Up" to="." method="_on_P1_Up_button_down"]
[connection signal="button_up" from="GUI/P1/Container/Up" to="." method="_on_P1_Up_button_up"]
[connection signal="button_down" from="GUI/P1/Container/Down" to="." method="_on_P1_Down_button_down"]
[connection signal="button_up" from="GUI/P1/Container/Down" to="." method="_on_P1_Down_button_up"]
[connection signal="button_down" from="GUI/P2/Container/Up" to="." method="_on_P2_Up_button_down"]
[connection signal="button_up" from="GUI/P2/Container/Up" to="." method="_on_P2_Up_button_up"]
[connection signal="button_down" from="GUI/P2/Container/Down" to="." method="_on_P2_Down_button_down"]
[connection signal="button_up" from="GUI/P2/Container/Down" to="." method="_on_P2_Down_button_up"]
